# dominion_tournaments

./: Cargo.toml  LICENSE  README.md
src/: main.rs  tourney_db.rs
static/: site.webmanifest  tournaments.js
templates/error/: 404.hbs
templates/layouts/: base.hbs
templates/pages/: about.hbs  calendar.hbs  index.hbs  players.hbs  tournaments.hbs
templates/partials/: footer.hbs  nav.hbs
