[package]
name = "dominion_tournaments"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["json", "serve", "handlebars_templates"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"